--- a/project/res/values-it/strings.xml
+++ b/project/res/values-it/strings.xml
@@ -4,8 +4,6 @@
     <!-- Tablet search strings -->
     <!-- Hint asking users to search for anything -->
     <string name="search_all_hint">Cerca destinazioni e luoghi di interesse</string>
-    <!-- Hint in edit text that the user should type in a destination (location) -->
-    <string name="destinations_hint">Cerca destinazioni…</string>
     <!-- Hint in edit text that the user should type in an origin (location) -->
     <string name="origins_hint">Cerca località di partenza…</string>
     <!-- To a destination.  %s is a destination name, e.g. "To San Francisco" -->
@@ -144,7 +142,19 @@
     <string name="tablet_search_results_hotels_unavailable">Spiacenti, nessun hotel \n disponibile al momento.</string>
     <!-- Tablet search results, no flights available -->
     <string name="tablet_search_results_flights_unavailable">Spiacenti, nessun volo \n disponibile al momento.</string>
-
+    <!-- Remove Trip Bucket Flight - Undo messaging -->
+    <string name="tablet_tripbucket_flight_removed">Volo eliminato.</string>
+    <!-- Remove Trip Bucket Hotel - Undo messaging -->
+    <string name="tablet_tripbucket_hotel_removed">Hotel eliminato.</string>
+    <!-- Label indicating how many items are being booked for the current trip -->
+    <plurals name="items_in_trip">
+        <item quantity="zero">prodotti inclusi nel viaggio</item>
+        <item quantity="one">prodotto incluso nel viaggio</item>
+        <item quantity="two">prodotti inclusi nel viaggio</item>
+        <item quantity="few">prodotti inclusi nel viaggio</item>
+        <item quantity="many">prodotti inclusi nel viaggio</item>
+        <item quantity="other">prodotti inclusi nel viaggio</item>
+    </plurals>
 
     <!-- Tablet hotel filters -->
     <!-- "Sort By" section header -->
@@ -174,23 +184,25 @@
     <!-- Denoting the lowest hotel/flight rate, e.g. "From $200" -->
     <string name="From_x_TEMPLATE">Da %s</string>
     <!-- Drop down item for denoting that infant travellers are in laps -->
-    <string name="infants_in_laps">Neonati fino a 2 anni (al momento del viaggio) in braccio a un adulto</string>
+    <string name="infants_in_laps">In braccio a un adulto</string>
     <!-- Drop down item for denoting that infant travellers are in seats -->
-    <string name="infants_in_seats">Neonati fino a 2 anni (al momento del viaggio) con posto a sedere</string>
+    <string name="infants_in_seats">Posto a sedere</string>
     <!-- Label for infants under 2 seating preference -->
     <string name="infants_under_two">Neonati fino a 2 anni</string>
     <!-- Label stating that there must be as many adults as infants if the seating preference is "in lap" -->
-    <string name="max_one_infant_per_lap">Massimo 1 neonato in braccio a un adulto (&gt;13)</string>
+    <string name="max_one_infant_per_lap">Non ci sono adulti (&lt;12 anni) a sufficienza per consentire ai bambini di viaggiare in braccio. I bambini devono viaggiare con posto a sedere assegnato.</string>
     <!-- Description for infant travelers sitting in laps -->
     <string name="in_laps">In braccio a un adulto</string>
     <!-- Description for infant travelers sitting in seats -->
     <string name="in_seats">Con posto a sedere</string>
     <!-- Title for infant seating preference -->
     <string name="infant_seating_preference">Preferenze posti per i neonati fino a 2 anni</string>
+    <!-- Description for infant seating preference message -->
+    <string name="infants_seating_preference_description">I bambini di età inferiore ai 2 anni (al momento del volo) siederanno in braccio a un adulto o avranno il proprio posto a sedere?</string>
     <!-- A message telling the user that the app needs to do a new search because infant seating preference has changed to in seat-->
-    <string name="infants_in_seats_prompt">I neonati fino a 2 anni (al momento del viaggio) avranno il proprio posto a sedere. Ripeteremo la ricerca per ottenere il numero esatto di biglietti.</string>
+    <string name="infants_in_seats_prompt">I bambini con posto a sedere devono essere muniti di biglietto. Ripetiamo la ricerca per i biglietti dei bambini.</string>
     <!-- A message telling the user that the app needs to do a new search because infant seating preference has changed to in lap-->
-    <string name="infants_in_laps_prompt">I neonati fino a 2 anni (al momento del viaggio) devono sedere in braccio a un altro passeggero, di età superiore a 12 anni. Ripeteremo la ricerca per ottenere il numero esatto di biglietti.</string>
+    <string name="infants_in_laps_prompt">I bambini che siedono in braccio a un adulto non devono essere muniti di biglietto. Inizieremo una nuova ricerca per un numero inferiore di biglietti.</string>
 
     <!-- Tablet flight sort/filter controls -->
     <!-- Header for a flight filter based upon number of stops -->
@@ -215,7 +227,7 @@
 
     <!-- Tablet hotel details -->
     <!-- Rooms and rates price/night, i.e. $100/night -->
-    <string name="room_rate_per_night_template">&lt;font color="#145999"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;/notte</string>
+    <string name="room_rate_per_night_template">%s/notte</string>
     <!-- Rooms and rates resort fees template. i.e. This hotel charges additional fees of $25 -->
     <string name="tablet_room_rate_resort_fees_template">Questo hotel addebita un costo aggiuntivo di &lt;font color="#666666"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;</string>
     <!-- Rooms and rates button to add selected room to trip -->
@@ -354,6 +366,8 @@
     <string name="error_launch_connection">Purtroppo non è possibile effettuare la connessione.</string>
     <!-- Menu option for going to see your trips/itineraries -->
     <string name="trips">Viaggi</string>
+    <!-- Menu option for going to see your trips/itineraries -->
+    <string name="Your_Trips">I tuoi viaggi</string>
     <!-- Actionbar Title on main launch screen -->
     <string name="Explore">Esplora</string>
     <!-- Actionbar Title when an exotic destination is being displayed -->
