--- a/project/res/values-zh/strings.xml
+++ b/project/res/values-zh/strings.xml
@@ -4,8 +4,6 @@
     <!-- Tablet search strings -->
     <!-- Hint asking users to search for anything -->
     <string name="search_all_hint">搜索目的地和地标</string>
-    <!-- Hint in edit text that the user should type in a destination (location) -->
-    <string name="destinations_hint">搜索目的地…</string>
     <!-- Hint in edit text that the user should type in an origin (location) -->
     <string name="origins_hint">搜索出发地…</string>
     <!-- To a destination.  %s is a destination name, e.g. "To San Francisco" -->
@@ -144,7 +142,19 @@
     <string name="tablet_search_results_hotels_unavailable">很抱歉，未找到\n有空房的酒店</string>
     <!-- Tablet search results, no flights available -->
     <string name="tablet_search_results_flights_unavailable">很抱歉，未找到\n有余票的航班</string>
-
+    <!-- Remove Trip Bucket Flight - Undo messaging -->
+    <string name="tablet_tripbucket_flight_removed">航班已删除。</string>
+    <!-- Remove Trip Bucket Hotel - Undo messaging -->
+    <string name="tablet_tripbucket_hotel_removed">酒店已删除。</string>
+    <!-- Label indicating how many items are being booked for the current trip -->
+    <plurals name="items_in_trip">
+        <item quantity="zero">项旅行内容</item>
+        <item quantity="one">项旅行内容</item>
+        <item quantity="two">项旅行内容</item>
+        <item quantity="few">项旅行内容</item>
+        <item quantity="many">项旅行内容</item>
+        <item quantity="other">项旅行内容</item>
+    </plurals>
 
     <!-- Tablet hotel filters -->
     <!-- "Sort By" section header -->
@@ -174,23 +184,25 @@
     <!-- Denoting the lowest hotel/flight rate, e.g. "From $200" -->
     <string name="From_x_TEMPLATE">起价 %s</string>
     <!-- Drop down item for denoting that infant travellers are in laps -->
-    <string name="infants_in_laps">2 岁以下婴儿怀抱（以旅行之日为准）</string>
+    <string name="infants_in_laps">怀抱</string>
     <!-- Drop down item for denoting that infant travellers are in seats -->
-    <string name="infants_in_seats">2 岁以下婴儿占座（以旅行之日为准）</string>
+    <string name="infants_in_seats">座位</string>
     <!-- Label for infants under 2 seating preference -->
     <string name="infants_under_two">2 岁以下婴儿</string>
     <!-- Label stating that there must be as many adults as infants if the seating preference is "in lap" -->
-    <string name="max_one_infant_per_lap">每位成人（13 岁以上）最多只能怀抱 1 名婴儿</string>
+    <string name="max_one_infant_per_lap">12 岁以上成人的人数不够怀抱设定的婴儿人数。其他婴儿需要自己的座位。</string>
     <!-- Description for infant travelers sitting in laps -->
     <string name="in_laps">怀抱</string>
     <!-- Description for infant travelers sitting in seats -->
     <string name="in_seats">占座</string>
     <!-- Title for infant seating preference -->
     <string name="infant_seating_preference">2 岁以下婴儿座位选择</string>
+    <!-- Description for infant seating preference message -->
+    <string name="infants_seating_preference_description">2 岁以下婴儿（以航班出发之日为准）需要怀抱还是占座？</string>
     <!-- A message telling the user that the app needs to do a new search because infant seating preference has changed to in seat-->
-    <string name="infants_in_seats_prompt">所有 2 岁以下婴儿都有自己的座位（以旅行之日为准）需要的机票数量有变化，现在要重新搜索航班。</string>
+    <string name="infants_in_seats_prompt">占座的婴儿需要单独购票。我们会增加婴儿票，然后再搜索一次。</string>
     <!-- A message telling the user that the app needs to do a new search because infant seating preference has changed to in lap-->
-    <string name="infants_in_laps_prompt">所有 2 岁以下的婴儿必须有 12 岁以上的旅客怀抱（以旅行之日为准）。需要的机票数量有变化，现在要重新搜索航班。</string>
+    <string name="infants_in_laps_prompt">怀抱的婴儿无需单独购票。我们会减少购票数量，再搜索一次。</string>
 
     <!-- Tablet flight sort/filter controls -->
     <!-- Header for a flight filter based upon number of stops -->
@@ -215,7 +227,7 @@
 
     <!-- Tablet hotel details -->
     <!-- Rooms and rates price/night, i.e. $100/night -->
-    <string name="room_rate_per_night_template">&lt;font color="#145999"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;/晚</string>
+    <string name="room_rate_per_night_template">%s/晚</string>
     <!-- Rooms and rates resort fees template. i.e. This hotel charges additional fees of $25 -->
     <string name="tablet_room_rate_resort_fees_template">该酒店另外收费 &lt;font color="#666666"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;</string>
     <!-- Rooms and rates button to add selected room to trip -->
@@ -354,6 +366,8 @@
     <string name="error_launch_connection">很遗憾，我们无法建立连接。</string>
     <!-- Menu option for going to see your trips/itineraries -->
     <string name="trips">旅行</string>
+    <!-- Menu option for going to see your trips/itineraries -->
+    <string name="Your_Trips">您的旅行</string>
     <!-- Actionbar Title on main launch screen -->
     <string name="Explore">探索</string>
     <!-- Actionbar Title when an exotic destination is being displayed -->
